# Advanced-Compilers-F25

./: cfg.py  cfg.test  cfg.test.out  turnt.toml
DataflowAnalysesUsingWorklist/: README.md  df.py  rdtest.bril  turnt.toml
DataflowAnalysesUsingWorklist/test/: ae_turnttest.bril  ae_turnttest.out  rd_turnttest.bril  rd_turnttest.out
dead-store-elim/: MemorySSADemo.cpp  README.md  array_loop1.c  array_loop1.ll  array_loop1_simplified.ll  branch_example.c  branch_example.ll  branch_example_simplified.ll  demo.c  demo.ll  demo2.c  demo2.ll  demo2_simplified.ll  demo_dse.ll  demo_simplified.ll  memssa_demo2.dot  test1.c  test1.ll  test1_simplified.ll
llvm-exercises/: loop-info.txt
llvm-exercises/cfgs/: .main.dot  .matmul.dot  dom.main.dot  dom.matmul.dot
llvm-exercises/inputs/: matmul-canonical.ll
llvm-exercises/outputs/: matmul_interchanged.ll  matmul_licm.ll
llvm-tutor/: CMakeLists.txt
llvm-tutor/HelloWorld/: CMakeLists.txt
llvm-tutor/inputs/: matmul.c  matmul.ll
llvm-tutor/lib/: CMakeLists.txt  DerivedInductionVar.cpp  DynamicCallCounter.cpp  InjectFuncCall.cpp  README.md  (+1 more)
llvm/defuse/: CMakeLists.txt  DefUseChains.cpp  README.md
llvm/loopinfo/: CMakeLists.txt  LoopInfoExample.cpp  README.md
llvm/mypass/: CMakeLists.txt  README.md  mypass.cpp
mlir-examples/: README.md  array_add.mlir  array_add.py  array_add_jit.py  array_add_opt.ll  array_add_opt.mlir  loop_add.ll  loop_add.mlir  loop_add_llvm.mlir  np_memref.py
torch-mlir-examples/: README.md  tensor_generate_example.mlir  torchmlir_example.py
working_with_cfgs/: README.md  cfg_utils.py
(+1 files in other folders)
